--- a/test_report.css
+++ b/test_report.css
@@ -70,6 +70,7 @@ input {
 .display-section {
   background-color: #f9f9f9;
   min-height: 100vh;
+  word-break: break-all;
 }
 
 /* CONTENT SECTION ELEMENTS (LEFT PART) */
@@ -110,9 +111,12 @@ input {
   margin-left: 15px;
 }
 .duration {
-  font-size: 8px;
+  font-size: 9px;
   width: 100%;
-  text-align: center;
+  padding-left: 5px;
+}
+.artifacts {
+  font-size: 9px;
 }
 
 .iconFail {
@@ -157,8 +161,21 @@ input {
   margin-left: 3px;
 }
 
-.bgr-grey {
+/* DISPLAY SECTION ELEMENTS (LEFT PART) */
+
+.summary-container {
+  line-height: 25px;
   border-radius: 5px;
   background: rgba(163, 177, 198, 0.1);
   box-shadow: 0px 0px 5px grey;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center;
+  padding: 5px;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.display-margin {
+  margin: 0px 10px 10px 10px;
 }
