--- a/test_report.css
+++ b/test_report.css
@@ -56,25 +56,28 @@ input {
   display: flex;
   flex-direction: row;
   width: 100%;
+  height: 100%;
 }
+
 .separator {
-  border: 0.5px solid rgb(209, 207, 207);
+  border: 0.5px solid rgb(179, 176, 176);
   cursor: col-resize;
+  height: 90vh;
 }
 
 /* SECTIONS */
-.content-section,
-.display-section {
+
+.split-pane-left,
+.split-pane-right {
+  flex: 1;
+  overflow: hidden;
   width: 100%;
   padding: 1rem;
   height: 100%;
-  overflow: scroll;
-  overflow-x: hidden;
 }
-
-.display-section {
+.split-pane-right {
   background-color: #f9f9f9;
-  min-height: 100vh;
+  min-height: 90vh;
   word-break: break-all;
 }
 
@@ -269,10 +272,4 @@ input {
   background-color: #4e89ae;
   color: white;
   outline: none;
-}
-
-.split-pane-left,
-.split-pane-right {
-  flex: 1;
-  overflow: hidden;
 }
