adjusting separator width

--- a/test_report.css
+++ b/test_report.css
@@ -62,7 +62,7 @@ input {
 .separator {
   border: 2px solid rgb(179, 176, 176);
   cursor: col-resize;
-  height: 90vh;
+  min-height: 90vh;
 }
 
 /* SECTIONS */
