--- a/TestResults.css
+++ b/TestResults.css
@@ -253,11 +253,10 @@ a {
   margin-top: 0.5rem;
   box-shadow: 0px 0px 8px #ccc;
   padding: 0.5rem;
-}
-.image img {
   width: 100%;
-  height: 400px;
+  height: 100%;
 }
+
 .imagePath {
   margin-top: 3px;
   margin-bottom: 5px;
