--- a/TestResults.css
+++ b/TestResults.css
@@ -111,7 +111,9 @@ input {
 .node-container:hover {
   background-color: #e1e8ed;
 }
-
+.active-node {
+  background-color: rgba(163, 177, 198, 0.3);
+}
 .node-title {
   padding: 3px 0px 3px 0px;
   width: 100%;
